[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "pokemon-scanner"
version = "0.1.0"
description = "Pokemon Card Scanner"
authors = ["LeandreRaeth <leandreraeth19@gmail.com@email.com>"]

[tool.poetry.dependencies]
python = "^3.11"
Flask = "^2.3.3"
Flask-CORS = "^4.0.0"
easyocr = "^1.7.0"
opencv-python-headless = "^4.8.1.78"
rapidfuzz = "^3.5.2"
numpy = "^1.24.3"
Pillow = "^9.5.0"
gunicorn = "^21.2.0"

[tool.poetry.scripts]
start = "gunicorn app:app"
